# agentic-ai-playground

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
config/: default.yaml
docs/: agents.md  contributing.md  getting-started.md  tools.md
examples/advanced/: code_review_workflow.py  multi_agent_system.py  research_agent.py
examples/basic/: chat_agent.py  local_agent.py  tool_using_agent.py
src/agentic/: __init__.py  api.py  cli.py  config.py  registry.py  token_tracker.py  utils.py
src/agentic/agents/: __init__.py  base.py  orchestrator.py  react.py  tool.py
src/agentic/llm/: __init__.py  base.py  ollama.py  openai.py
src/agentic/memory/: __init__.py  base.py  buffer.py  summary.py  vector.py
src/agentic/tools/: __init__.py  base.py  code.py  files.py  web.py
tests/: test_advanced.py  test_agents.py  test_memory.py  test_tools.py
