[project]
name = "agentic-ai-playground"
version = "0.1.0"
description = "A modular framework for building, testing, and deploying AI agents"
authors = [{ name = "Agentic AI Playground" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ai", "agents", "llm", "agentic", "framework"]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
openai = ["openai>=1.0"]
ollama = ["ollama>=0.1"]
all = ["agentic-ai-playground[openai,ollama,dev]"]
server = ["fastapi>=0.110", "uvicorn>=0.27"]

[project.scripts]
agentic = "agentic.cli:main"

[project.urls]
homepage = "https://github.com/ayushrajdev9-cmyk/agentic-ai-playground"
repository = "https://github.com/ayushrajdev9-cmyk/agentic-ai-playground"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=72.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
